--- a/filebrowser/templates/filebrowser/createdir.html
+++ b/filebrowser/templates/filebrowser/createdir.html
@@ -23,7 +23,7 @@
     {% if query.pop %}
         {% include "filebrowser/include/breadcrumbs.html" %}
     {% endif %}
-    <form action="{% query_string '' 'p' %}" method="post">{% fb_csrf_token %}
+    <form action="{% query_string '' 'p' %}" method="post">{% csrf_token %}
         <div>
             {% if form.errors %}<p class="errornote">{% trans 'Please correct the following errors.' %}</p>{% endif %}
             <fieldset class="module aligned wide">
